# rs-music

./: .gitignore  LICENSE  README.md  package.json
.github/workflow/: release-app.yml
.github/workflows/: release-app.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250929_create_music_table.sql
src-tauri/src/: db.rs  lib.rs  lrc.rs  main.rs  music.rs  tag.rs  tray.rs  utils.rs
src/components/: EmptyText.tsx  Search.tsx  index.ts
src/components/player/: AlbumCover.tsx  LyricsPanel.tsx  PlayControls.tsx  PlayModeButton.tsx  ProgressBar.tsx  SongInfo.tsx  VolumeControl.tsx
src/components/songlist/: AddPlaylistDialog.tsx  NewDialog.tsx  NewPlaylistDialog.tsx  PlaylistPanel.tsx  RenameDialog.tsx  SongTable.tsx
src/layout/: Aside.tsx  MainContent.tsx  Player.tsx  Search.tsx
src/store/: db.ts  index.ts  lyricsAtom.ts  playbackAtom.ts  playerAtom.ts  settingsAtom.ts
src/utils/: index.ts
src/views/: DownloadList.tsx  Ranking.tsx  SearchList.tsx  Setting.tsx  SongList.tsx  index.ts
