[package]
name = "rs-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rs_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rodio = "0.21.1"
tauri-plugin-store = "2"
lofty = "0.22.4"
base64 = "0.22.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio" ] }
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "macros" ] }
glob = "0.3.3"

